--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "antd": "^5.16.2",
     "axios": "^1.6.5",
     "classnames": "^2.5.1",
     "eslint": "8.22.0",
